--- a/index.html
+++ b/index.html
@@ -8,37 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        #iiif-map {
-            position: absolute;
-            width: 100%;
-            top: 0;
-            bottom: 0;
-        }
-
-        #current-view {
-            position: absolute;
-            left: 60px;
-            top: 12px;
-            z-index: 1000;
-            background: whitesmoke;
-            padding: 8px 12px;
-        }
-
-        #ui {
-            position: absolute;
-            left: 12px;
-            bottom: 12px;
-            z-index: 1000;
-            background: whitesmoke;
-            padding: 8px 12px;
-        }
-    </style>
+        <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -57,40 +27,9 @@
     <!-- make sure to import Leaflet-IIIF *after* the main Leaflet package -->
     <script src="https://cdn.rawgit.com/mejackreed/Leaflet-IIIF/v3.0.0/leaflet-iiif.js"></script>
 
-    <script src = './data.json'></script>
-    <script>
-        const map = L.map("iiif-map", {
-            center: [0, 0],
-            crs: L.CRS.Simple,
-            zoom: 0,
-        });
+    <script src = "./data/img.json"></script>
+    <script src= "./js/app.js"></script>
 
-        
-
-        // ALTERNATIVE MAP URL: https://www.digitalcommonwealth.org/search/commonwealth:3f462s82t
-        const endNode = imgJson["sequences"][0]["canvases"][0]["images"][0]["resource"]["service"]["@id"]
-
-        const jerusalemLayer = new L.tileLayer.iiif(endNode + "/info.json").addTo(map);
-
-
-        map.on("moveend", () => {
-            // returns 'southwest_lng,southwest_lat,northeast_lng,northeast_lat' of current view
-            const currentBounds = map.getBounds().toBBoxString();
-            //console.log(currentBounds)
-
-            // output current bounds to screen
-            document.getElementById("current-bounds").innerText = currentBounds;
-        });
-        
-        document
-            .getElementById("zoom-to-legend")
-            .addEventListener("click", () => {
-                map.flyToBounds([
-                    [-584, 12],
-                    [-284, 312],
-                ]);
-            });
-    </script>
 </body>
 
 </html>
