got scene buttons working and text live

--- a/index.html
+++ b/index.html
@@ -8,17 +8,44 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
-        <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
+    <div id="caption-wrapper"> 
+        <!-- Figure this mess out-->
+        <div id="caption-left-control" class=caption-control>
+            <div><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" role="img"
+                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                    class="svg-inline--fa fa-arrow-left fa-w-14">
+                    <path fill="currentColor"
+                        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
+                        class=""></path>
+                </svg>
+            </div>
+        </div>
+        <div id="caption-right-control" class="caption-control">
+            <div><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-right" role="img"
+                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                    class="svg-inline--fa fa-arrow-right fa-w-14">
+                    <path fill="currentColor"
+                        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
+                        class=""></path>
+                </svg></div>
+        </div>
+    </div>
+
+    <span class="counter">1/13</span> <!-- may just end up deleting-->
+
     <div id="iiif-map"></div>
     <div id="current-view">
         Current bounds:<br />
         <div id="current-bounds"></div>
     </div>
     <div id="ui">
-        <button id="zoom-to-legend">Zoom in on the legend</button>
+        <button id="zoom-to-legend">Scene 1</button>
+        <button id="zoom-to-legend2">Scene 2</button>
+        <button id="zoom-to-legend3">Scene 3</button>
     </div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
@@ -27,8 +54,17 @@
     <!-- make sure to import Leaflet-IIIF *after* the main Leaflet package -->
     <script src="https://cdn.rawgit.com/mejackreed/Leaflet-IIIF/v3.0.0/leaflet-iiif.js"></script>
 
-    <script src = "./data/img.json"></script>
-    <script src= "./js/app.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+    <script src="https://geoservices.leventhalmap.org/panel-truck/webcomponent-0.2/panel-truck.min.js"></script>
+
+
+
+    <script src="./data/img.json"></script>
+    <script src="./data/pages.json"></script>
+    <script src="./js/app.js"></script>
+
 
 </body>
 
