i have the flytobounds and scenes working

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="caption-wrapper"> 
+    <div id="caption-wrapper">
         <!-- Figure this mess out-->
         <div id="caption-left-control" class=caption-control>
             <div><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" role="img"
@@ -42,11 +42,15 @@
         Current bounds:<br />
         <div id="current-bounds"></div>
     </div>
+
+
+    <div id="ui-box"></div>
     <div id="ui">
-        <button id="zoom-to-legend">Scene 1</button>
-        <button id="zoom-to-legend2">Scene 2</button>
-        <button id="zoom-to-legend3">Scene 3</button>
+        <button id="scene-one">Scene 1</button>
+        <button id="scene-two">Scene 2</button>
+        <button id="scene-three">Scene 3</button>
     </div>
+
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
