--- a/index.html
+++ b/index.html
@@ -12,30 +12,7 @@
 </head>
 
 <body>
-    <div id="caption-wrapper">
-        <!-- Figure this mess out-->
-        <div id="caption-left-control" class=caption-control>
-            <div><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" role="img"
-                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
-                    class="svg-inline--fa fa-arrow-left fa-w-14">
-                    <path fill="currentColor"
-                        d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
-                        class=""></path>
-                </svg>
-            </div>
-        </div>
-        <div id="caption-right-control" class="caption-control">
-            <div><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-right" role="img"
-                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
-                    class="svg-inline--fa fa-arrow-right fa-w-14">
-                    <path fill="currentColor"
-                        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
-                        class=""></path>
-                </svg></div>
-        </div>
-    </div>
-
-    <span class="counter">1/13</span> <!-- may just end up deleting-->
+    <div id="text-box" style="font-weight: bold;"> STARTING STATE</div>
 
     <div id="iiif-map"></div>
     <div id="current-view">
@@ -44,11 +21,17 @@
     </div>
 
 
-    <div id="ui-box"></div>
     <div id="ui">
-        <button id="scene-one">Scene 1</button>
-        <button id="scene-two">Scene 2</button>
-        <button id="scene-three">Scene 3</button>
+        <button id="scene_0">Introduction</button>
+        <button id="scene_1">Scene 1</button>
+        <button id="scene_2">Scene 2</button>
+        <button id="scene_3">Scene 3</button>
+        <button id="scene_4">Scene 4</button>
+        <button id="scene_5">Scene 5</button>
+        <button id="scene_6">Scene 6</button>
+        <button id="scene_7">Scene 7</button>
+        <button id="scene_8">Scene 8</button>
+        
     </div>
 
 
