basic structure and functionality refactored

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
+        
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -22,15 +23,11 @@
 
 
     <div id="ui">
-        <button id="scene_0">Introduction</button>
-        <button id="scene_1">Scene 1</button>
-        <button id="scene_2">Scene 2</button>
-        <button id="scene_3">Scene 3</button>
-        <button id="scene_4">Scene 4</button>
-        <button id="scene_5">Scene 5</button>
-        <button id="scene_6">Scene 6</button>
-        <button id="scene_7">Scene 7</button>
-        <button id="scene_8">Scene 8</button>
+        <button id="scene0">Introduction</button>
+        <button id="scene1">Scene 1</button>
+        <button id="scene2">Scene 2</button>
+        <button id="scene3">Scene 3</button>
+
         
     </div>
 
