--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <button id="scene4">Scene 4</button>
         <button id="scene5">Scene 5</button>
         <button id="scene6">Scene 6</button>
+        <button id="scene7">Scene 7</button>
+        <button id="scene8">Scene 8</button>
+        <button id="scene8">End</button>
 
     </div>
 
