--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 
 <body>
     <div id="text-box">
-        Maps are fascinating artifacts not only in what they visualize,
-        but more so in the presumptions they disclose. For contemporary
-        map-makers we deal with arithmetic collection of
-        data representing points along a raster grid. We perform arithmetic transformations on such data in order to
-        visualize them spherically. But this was not always the case, for points were not derived from storage in computer
-        memory, but from the stars,
-        Let us look a bit closer into this matter.
+        Maps are fascinating artifacts not only in what they visualize, but more so in the presumptions they disclose.
+        For contemporary map-makers we deal with arithmetic collection of data, representing points along a raster grid.
+        We perform arithmetic transformations on such data in order to visualize them spherically. But this was not
+        always the case, for points were not always derived from storage in computer memory, but from the stars. Let us
+        look a bit closer into this matter from two points of view: functionality and theology
     </div>
 
 
