took out bounding box and assocaited functionality

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 
     <div id="iiif-map"></div>
-    <div id="current-view">
+    <!-- <div id="current-view">
         Current bounds:<br />
         <div id="current-bounds"></div>
-    </div>
+    </div> <- Legacy--> 
 
 
     <div id="ui">
